// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Accordion Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-fqcnox-0 llbqsw"
    data-testid="accordion_id"
    id="accordion_id"
  >
    <button
      aria-expanded="false"
      className="accordion-toggle "
      data-testid="accordion_id_button"
      id="accordion_id_button"
      onClick={[Function]}
    >
      <div
        className="sc-kazc2j-0 dtNeUd"
        style={
          Object {
            "bottom": undefined,
            "left": undefined,
            "right": undefined,
            "top": undefined,
          }
        }
      >
        <div
          className="sc-kazc2j-0 hHJZsJ"
          direction="column"
          style={
            Object {
              "bottom": undefined,
              "left": undefined,
              "right": undefined,
              "top": undefined,
            }
          }
        >
          <p
            className="sc-15mqapg-0 eeHXJt"
            color="neutral-900"
            data-testid="accordion_id_title"
            id="accordion_id_title"
            size="md"
          >
            Accordion Title
          </p>
        </div>
      </div>
      <div
        className="accordion-chevron"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="IconChevronDown-label"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="IconChevronDown-label"
          >
            ChevronDown
          </title>
          <path
            d="M13.65 4.643a.5.5 0 01.7.714L8 11.594 1.65 5.357a.5.5 0 01.7-.714L8 10.193l5.65-5.55z"
          />
        </svg>
      </div>
    </button>
    <section
      aria-hidden="true"
      className="accordion-content"
      style={
        Object {
          "maxHeight": "0px",
        }
      }
    >
      <div
        data-testid="accordion_id_content"
        id="accordion_id_content"
      >
        Accordion content
      </div>
    </section>
  </div>
</div>
`;

exports[`Storyshots Molecules/Accordion Skeleton 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-kjnynt-0 jfZhXD"
    data-testid="accordion_id_skeleton"
    id="accordion_id_skeleton"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div
      className="sc-fqcnox-0 llbqsw"
      data-testid="accordion_id"
      id="accordion_id"
    >
      <button
        aria-expanded="false"
        className="accordion-toggle "
        data-testid="accordion_id_button"
        id="accordion_id_button"
        onClick={[Function]}
      >
        <div
          className="sc-kazc2j-0 dtNeUd"
          style={
            Object {
              "bottom": undefined,
              "left": undefined,
              "right": undefined,
              "top": undefined,
            }
          }
        >
          <div
            className="sc-kazc2j-0 hHJZsJ"
            direction="column"
            style={
              Object {
                "bottom": undefined,
                "left": undefined,
                "right": undefined,
                "top": undefined,
              }
            }
          >
            <p
              className="sc-15mqapg-0 eeHXJt"
              color="neutral-900"
              data-testid="accordion_id_title"
              id="accordion_id_title"
              size="md"
            >
              Accordion Title
            </p>
          </div>
        </div>
        <div
          className="accordion-chevron"
        >
          <svg
            aria-hidden="true"
            aria-labelledby="IconChevronDown-label"
            fill="none"
            focusable="false"
            height="16"
            role="img"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <title
              id="IconChevronDown-label"
            >
              ChevronDown
            </title>
            <path
              d="M13.65 4.643a.5.5 0 01.7.714L8 11.594 1.65 5.357a.5.5 0 01.7-.714L8 10.193l5.65-5.55z"
            />
          </svg>
        </div>
      </button>
      <section
        aria-hidden="true"
        className="accordion-content"
        style={
          Object {
            "maxHeight": "0px",
          }
        }
      >
        <div
          data-testid="accordion_id_content"
          id="accordion_id_content"
        >
          Accordion content
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`Storyshots Molecules/Accordion With Subtitle 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="sc-fqcnox-0 llbqsw"
    data-testid="accordion_id"
    id="accordion_id"
  >
    <button
      aria-expanded="false"
      className="accordion-toggle "
      data-testid="accordion_id_button"
      id="accordion_id_button"
      onClick={[Function]}
    >
      <div
        className="sc-kazc2j-0 dtNeUd"
        style={
          Object {
            "bottom": undefined,
            "left": undefined,
            "right": undefined,
            "top": undefined,
          }
        }
      >
        <div
          className="sc-kazc2j-0 hHJZsJ"
          direction="column"
          style={
            Object {
              "bottom": undefined,
              "left": undefined,
              "right": undefined,
              "top": undefined,
            }
          }
        >
          <p
            className="sc-15mqapg-0 eeHXJt"
            color="neutral-900"
            data-testid="accordion_id_title"
            id="accordion_id_title"
            size="md"
          >
            Accordion Title
          </p>
        </div>
      </div>
      <div
        className="accordion-chevron"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="IconChevronDown-label"
          fill="none"
          focusable="false"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="IconChevronDown-label"
          >
            ChevronDown
          </title>
          <path
            d="M13.65 4.643a.5.5 0 01.7.714L8 11.594 1.65 5.357a.5.5 0 01.7-.714L8 10.193l5.65-5.55z"
          />
        </svg>
      </div>
    </button>
    <section
      aria-hidden="true"
      className="accordion-content"
      style={
        Object {
          "maxHeight": "0px",
        }
      }
    >
      <div
        data-testid="accordion_id_content"
        id="accordion_id_content"
      >
        Accordion content
      </div>
    </section>
  </div>
</div>
`;
